concert-platform/kubernetes/sqs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqs-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sqs-consumer
  template:
    metadata:
      labels:
        app: sqs-consumer
    spec:
      containers:
      - name: sqs-consumer
        image: public.ecr.aws/r5m2h0c9/concert-platform-sqs-consumer:latest
