concert-platform/kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticketing-svc
spec:
  selector:
    app: ticketing
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
